--- a/talks-app-client/package.json
+++ b/talks-app-client/package.json
@@ -19,6 +19,7 @@
     "apollo-link": "^1.2.2",
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
+    "axios": "^0.18.0",
     "element-ui": "^2.3.6",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
